@@ -2589,3 +2589,4 @@ Version 18
 		of PieChartChartingPropertyInspector.
 	Extended ThreadedDiffuser in HeatBugs to handle any number of threads
 	Added a "Redaw once at the next step" option to Display2D and 3D
+	Added dashing constants to TimeSeriesAttributes
